# SDL_SANJUAN

./: Argv.c  Argv.h  Bot.c  Bot.h  Button.c  Button.h  CMakeLists.txt  Card.c  Card.h  Career.c  Career.h  Deck.c  Deck.h  Draw.c  Draw.h  GameMain.c  GameMain.h  Language.c  Language.h  Main.c  Player.c  Player.h  README.md  Sanjuandata.h  Sanjuandef.c  Sanjuandef.h  Setting.c  Setting.h  Sound.c  Sound.h  TODO.txt  Window.c  Window.h  code-introdution.md  run.sh  setting.sh
Asset/Language/: Chinese  English
